Added a parameter for setting MaxPermSize as well as heap.